--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -9,6 +9,7 @@ body {
   scroll-behavior: smooth;
   overflow-y: hidden;
 }
+
 .load-page {
   background: #000;
   height: 100vh;
@@ -61,6 +62,8 @@ body {
   display: flex;
   flex-direction: column;
   position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
 }
 .scroll-item {
   width: 100%;
@@ -123,7 +126,11 @@ body {
     left: 96px;
   }
 }
-
+@media screen and (max-width: 400px) {
+  .load-page {
+    flex-direction: column;
+  }
+}
 .main-page {
   height: 100vh;
   width: 100vw;
@@ -172,4 +179,23 @@ body {
 }
 .sec-text {
   padding: 5px;
+}
+
+@media screen and (max-width: 400px) {
+  .load-page {
+    flex-direction: column;
+  }
+  .glass-card {
+    display: flex;
+    flex-direction: column;
+  }
+  .img-container {
+    color: #fff;
+    font-size: 18px;
+    display: flex;
+    flex-direction: column;
+  }
+  .img-text {
+    padding: 10px 5px;
+  }
 }
