--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -177,7 +177,7 @@ body {
   padding: 10px 20px 20px 20px;
 }
 
-@media only screen and (max-width: 450px) {
+@media screen and (max-width: 450px) {
   .load-page {
     flex-direction: column;
     align-items: center;
