--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -7,7 +7,6 @@
 }
 body {
   scroll-behavior: smooth;
-  overflow-y: hidden;
   background: #222;
 }
 
@@ -184,8 +183,7 @@ body {
   }
   .main-page {
     font-size: 14px;
-    height: max-content;
-    padding-bottom: 10px;
+    height: max-content + 50vh;
   }
   .glass-card {
     width: 90%;
